# downtube

./: .gitignore  .prettierrc  README.md  build.py  package.json  pnpm-lock.yaml
client/src-frontend/: package.json  pnpm-lock.yaml
client/src-frontend/src/: style.css
client/src-frontend/src/components/ShowInfo/: ShowInfo.module.css  ShowInfo.tsx
client/src-frontend/src/components/YoutubePlayer/: YoutubePlayer.module.css  YoutubePlayer.tsx
client/src-frontend/src/pages/: index.tsx
client/src-tauri-local/: Cargo.toml  tauri.conf.json
client/src-tauri-local/icons/: icon.icns
client/src-tauri-local/src/: main.rs
client/src-tauri-server/: Cargo.toml  appsettings.json  tauri.conf.json
client/src-tauri-server/icons/: icon.icns
client/src-tauri-server/src/: main.rs
server/: main.py  requirements.txt
src/: App.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/pages/: _app.tsx  index.tsx
